NYCCHKBK-3757 fix for spacing issue of empty table text to be centered.

--- a/source/webapp/sites/all/themes/checkbook3/css/global.css
+++ b/source/webapp/sites/all/themes/checkbook3/css/global.css
@@ -1536,6 +1536,9 @@ td.pad-left div{
     vertical-align: middle;
     text-transform: uppercase;
 }
+.dataTables_wrapper td.dataTables_empty{
+ padding:10px;
+}
 .dataTable th div {
     margin: 8px 0 8px 5px;
 }
